--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a href="/assests/YeshwanthPoloju.pdf" download="YeshwanthPoloju.pdf">
+                <a href="/assests/YeshwanthPolojuresume-latest.pdf" download="YeshwanthPoloju.pdf">
                     My Resume <i class="uil uil-file-alt"></i>
                 </a>
                 <div class="nav-menu-btn">
@@ -59,7 +59,11 @@
                         <p>I'm <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p>Completed my gradution and am compassionate about working as a software Developer
+                        <p>I have completed my graduation in Data Science, gaining expertise in data analysis,
+                            statistical modeling, and machine learning. I am passionate about software development and
+                            data analytics, with skills in tools like MS Excel, SQL, and Tableau. I enjoy solving
+                            complex problems and creating impactful solutions. I am eager to contribute to innovative,
+                            data-driven projects.
                         </p>
                     </div>
                     <div class="featured-text-btn">
@@ -103,7 +107,7 @@
                                 frameworks and libraries,which allows me to implement interactive features.
                             </p>
                             <div class="about-btn">
-                                <a href="/assests/YeshwanthPoloju.pdf" download="YeshwanthPoloju.pdf">
+                                <a href="/assests/YeshwanthPolojuresume-latest.pdf" download="YeshwanthPoloju.pdf">
                                     My Resume <i class="uil uil-file-alt"></i>
                                 </a>
                             </div>
@@ -112,7 +116,7 @@
                     <div class="col">
                         <div class="skills-box">
                             <div class="skills-header">
-                                <h3>Frontend</h3>
+                                <h3>Web Development</h3>
                             </div>
                             <div class="skills-list">
                                 <span>HTML</span>
@@ -120,6 +124,8 @@
                                 <!-- <span>Bootstrap</span> -->
                                 <span>JavaScript</span>
                                 <span>React.js</span>
+                                <span>Node.js</span>
+                                <span>Express</span>    
                                 <!-- <span>Vue</span>
                                 <span>React</span>
                                 <span>Angular</span> -->
@@ -127,11 +133,11 @@
                         </div>
                         <div class="skills-box">
                             <div class="skills-header">
-                                <h3>Backend</h3>
+                                <h3>Data Analytics</h3>
                             </div>
                             <div class="skills-list">
-                                <span>Express</span>
-                                <span>JAVA</span>
+                                <span>MS Excel</span>
+                                <span>Tableau</span>
                                 <span>Python</span>
                                 <!-- <span>C++</span> -->
                             </div>
@@ -212,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
 
                     <script type="text/javascript"
                         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
@@ -323,7 +329,7 @@
     <!-- ----- MAIN JS ----- -->
     <script src="/main.js"></script>
 
-     
+
 </body>
 
 </body>
